--- a/src/views/app.html
+++ b/src/views/app.html
@@ -18,7 +18,7 @@
 </head>
 
 <body style="background: #fff">
-    <h4 style="text-align:center;margin-top:20%;font-size:3rem;">欢迎使用维保系统管理平台</h4>
+    <h4 style="text-align:center;margin-top:20%;font-size:3rem;">欢迎使用咖速修系统管理平台</h4>
     <!-- <h5 style="text-align:center;margin-top:20%;font-size:2.5rem;">Welcome to Cloud Management Platform for <br />Dream Intelligent Devices</h5>  -->
     <script>
         if(/(iPhone|iPad|iPod|iOS|Android)/i.test(navigator.userAgent)){
