--- a/src/views/index.html
+++ b/src/views/index.html
@@ -15,7 +15,7 @@
     <script src="../../../public/javascripts/plugin/vue.js"></script>
     <script src="../../../public/javascripts/plugin/element.min.js"></script>
 
-    <title>咖速修管理平台</title>
+    <title>咖速修系统管理平台</title>
 
     <link rel="icon" href="../../../public/images/icons/logo.ico" type="image/x-icon" />
 </head>
@@ -28,7 +28,7 @@
                 <i class="el-icon-s-operation"></i>
             </div>
             <div class="ym-menu-center">
-                <span>咖速修管理平台</span>
+                <span>咖速修系统管理平台</span>
             </div>
             <el-menu class="el-menu-demo" mode="horizontal" style="position:absolute;top:0;right:0;">
                 <el-submenu index="1">
