--- a/src/views/user.html
+++ b/src/views/user.html
@@ -78,10 +78,10 @@
                                     @click="rosSerchAssetesAll(scope.row.roleId);">
                                     资源权限
                                 </el-button>
-                                <el-button type="text" size="small"
+                                <!-- <el-button type="text" size="small"
                                     @click="dataSerchAssetes(scope.row.roleId)">
                                     数据权限
-                                </el-button>
+                                </el-button> -->
                             </template>
                         </el-table-column>
                     </el-table>
