--- a/src/views/client.html
+++ b/src/views/client.html
@@ -64,9 +64,8 @@
 
                         <el-table-column fixed="right" label="操作">
                             <template slot-scope="scope">
-                                <el-button type="text" size="small"
-                                    @click="clientblock(scope.row.clientId);">
-                                    {{ scope.row.status != 1 ? '正常' : '冻结' }} 
+                                <el-button type="text" size="small" @click="pullblack({URL: 'client_block', NUMBER: scope.row.clientId, TAG: 'clientId'})">
+                                    {{ scope.row.status != 1 ? '正常' : '冻结' }}
                                 </el-button>
                                 <el-button type="text" size="small"
                                     @click="clientaddress(scope.row.clientId);">
