--- a/src/views/advertisement.html
+++ b/src/views/advertisement.html
@@ -30,9 +30,8 @@
                     <el-form>
                         <el-input placeholder="请输入内容" v-model="listSearch._value_" class="_searchVal">
                             <el-select v-model="listSearch._name_" class="_searchVal_select" slot="prepend"
-                                placeholder="请选择">
-                                <el-option label="师傅名称" value="maintainerName"></el-option>
-                                <el-option label="手机号" value="maintainerPhone"></el-option>
+                                placeholder="请选择" :change="listSearch._name_ = 'advertisingName'">
+                                <el-option label="广告名称" value="advertisingName"></el-option>
                             </el-select>
                         </el-input>
 
@@ -41,8 +40,9 @@
                     </el-form>
                     <template>
                         <el-table :data="tableData" stripe style="width: 100%" border>
-                            <el-table-column prop="maintainerName" label="师傅名称"></el-table-column>
-                            <el-table-column prop="maintainerPhone" label="师傅电话"></el-table-column>
+                            <el-table-column prop="advertisingName" label="广告名称"></el-table-column>
+                            <el-table-column prop="advertisingUrl" label="资源地址"></el-table-column>
+                            <el-table-column prop="sort" label="排序"></el-table-column>
                             <el-table-column prop="status" label="状态">
                                 <template slot-scope="scope">
                                     <div :class="scope.row.status == 1 ? 'green' : 'red'">
@@ -53,8 +53,16 @@
                             <el-table-column fixed="right" label="操作">
                                 <template slot-scope="scope">
                                     <el-button type="text" size="small"
-                                        @click="payserverdetails(scope.row)">
+                                        @click="advdetails(scope.row)">
                                         详情
+                                    </el-button>
+                                    <el-button type="text" size="small"
+                                        @click="pullblack({URL: 'advertising_block', TAG: 'advertisingId', NUMBER: scope.row.id })">
+                                        冻结
+                                    </el-button>
+                                    <el-button type="text" size="small"
+                                        @click="deletedata({URL: 'delete_advertising', TAG: 'advertisingId', NUMBER: scope.row.id })">
+                                        删除
                                     </el-button>
                                 </template>
                             </el-table-column>
@@ -66,42 +74,26 @@
                         layout="total, sizes, prev, pager, next, jumper" :total="total">
                     </el-pagination>
 
-                    <el-dialog title="收费项" :visible.sync="SearchTableAndVisible" width="50%">
+                    <el-dialog title="首页广告" :visible.sync="SearchTableAndVisible" width="50%">
                         <el-form :data="SearchTableFormData" label-width="160px">
-                            <el-form-item label="报修分类名" prop="demandType">
-                                <el-radio-group v-model="SearchTableFormData.demandType">
-                                    <el-radio :label="1">远程指导</el-radio>
-                                    <el-radio :label="2">上门</el-radio>
-                                </el-radio-group>
+                            <el-form-item label="广告名" prop="advertisingName">
+                                <el-input v-model="SearchTableFormData.advertisingName"></el-input>
                             </el-form-item>
-                            <el-form-item label="需求名" prop="demandName ">
-                                <el-input v-model="SearchTableFormData.demandName "></el-input>
-                            </el-form-item>
-                            <el-form-item label="单价" prop="prices">
-                                <el-input v-model="SearchTableFormData.prices"></el-input>
-                            </el-form-item>
-                            <el-form-item label="参考价" prop="content">
-                                <el-input v-model="SearchTableFormData.content "></el-input>
+                            <el-form-item label="资源地址" prop="advertisingUrl">
+                                <el-input v-model="SearchTableFormData.advertisingUrl"></el-input>
                             </el-form-item>
                             <el-form-item label="排序号" prop="sort">
                                 <el-input v-model="SearchTableFormData.sort"></el-input>
                             </el-form-item>
-                            <el-form-item label="报修类型：" prop="repairsTypeIds">
-                                <el-table :data="options" @selection-change="handleSelectionChange" 
-                                tooltip-effect="dark" ref="multipleTable" height="300px">
-                                    <el-table-column type="selection" width="55"></el-table-column>
-                                    <el-table-column prop="machineName" label="设备类型">
-                                        <template slot-scope="scope">
-                                            {{ scope.row.machineName == -1 ? '无' : scope.row.machineName }}
-                                        </template>
-                                    </el-table-column>
-                                    <el-table-column prop="repairsTypeName" label="类型"></el-table-column>
-                                    <el-table-column prop="repairsName" label="类型名称"></el-table-column>
-                                </el-table>
+                            <el-form-item label="状态" prop="status">
+                                <el-radio-group v-model="SearchTableFormData.status">
+                                    <el-radio :label="1">上架</el-radio>
+                                    <el-radio :label="0">下架</el-radio>
+                                </el-radio-group>
                             </el-form-item>
                         </el-form>
                         <div class="btn-center" style="text-align: center; margin: 20px;">
-                            <el-button type="primary" @click="paysubmit(SearchTableFormData)">提交
+                            <el-button type="primary" @click="advsubmit(SearchTableFormData)">提交
                             </el-button>
                         </div>
                     </el-dialog>
