--- a/src/views/master.html
+++ b/src/views/master.html
@@ -66,8 +66,12 @@
                             <el-table-column fixed="right" label="操作">
                                 <template slot-scope="scope">
                                     <el-button type="text" size="small"
-                                        @click="payserverdetails(scope.row)">
+                                        @click="masterdetails(scope.row)">
                                         详情
+                                    </el-button>
+                                    <el-button type="text" size="small"
+                                    @click="deletedata({URL: 'delete_maintainer', TAG: 'maintainerId', NUMBER: scope.row.id })">
+                                        删除
                                     </el-button>
                                 </template>
                             </el-table-column>
@@ -79,42 +83,23 @@
                         layout="total, sizes, prev, pager, next, jumper" :total="total">
                     </el-pagination>
 
-                    <el-dialog title="收费项" :visible.sync="SearchTableAndVisible" width="50%">
+                    <el-dialog title="维修师傅" :visible.sync="SearchTableAndVisible" width="50%">
                         <el-form :data="SearchTableFormData" label-width="160px">
-                            <el-form-item label="报修分类名" prop="demandType">
-                                <el-radio-group v-model="SearchTableFormData.demandType">
-                                    <el-radio :label="1">远程指导</el-radio>
-                                    <el-radio :label="2">上门</el-radio>
+                            <el-form-item label="姓名" prop="maintainerName  ">
+                                <el-input v-model="SearchTableFormData.maintainerName  "></el-input>
+                            </el-form-item>
+                            <el-form-item label="手机号码" prop="maintainerPhone ">
+                                <el-input v-model="SearchTableFormData.maintainerPhone "></el-input>
+                            </el-form-item>
+                            <el-form-item label="状态" prop="status ">
+                                <el-radio-group v-model="SearchTableFormData.status ">
+                                    <el-radio :label="1">正常</el-radio>
+                                    <el-radio :label="0">冻结</el-radio>
                                 </el-radio-group>
-                            </el-form-item>
-                            <el-form-item label="需求名" prop="demandName ">
-                                <el-input v-model="SearchTableFormData.demandName "></el-input>
-                            </el-form-item>
-                            <el-form-item label="单价" prop="prices">
-                                <el-input v-model="SearchTableFormData.prices"></el-input>
-                            </el-form-item>
-                            <el-form-item label="参考价" prop="content">
-                                <el-input v-model="SearchTableFormData.content "></el-input>
-                            </el-form-item>
-                            <el-form-item label="排序号" prop="sort">
-                                <el-input v-model="SearchTableFormData.sort"></el-input>
-                            </el-form-item>
-                            <el-form-item label="报修类型：" prop="repairsTypeIds">
-                                <el-table :data="options" @selection-change="handleSelectionChange" 
-                                tooltip-effect="dark" ref="multipleTable" height="300px">
-                                    <el-table-column type="selection" width="55"></el-table-column>
-                                    <el-table-column prop="machineName" label="设备类型">
-                                        <template slot-scope="scope">
-                                            {{ scope.row.machineName == -1 ? '无' : scope.row.machineName }}
-                                        </template>
-                                    </el-table-column>
-                                    <el-table-column prop="repairsTypeName" label="类型"></el-table-column>
-                                    <el-table-column prop="repairsName" label="类型名称"></el-table-column>
-                                </el-table>
                             </el-form-item>
                         </el-form>
                         <div class="btn-center" style="text-align: center; margin: 20px;">
-                            <el-button type="primary" @click="paysubmit(SearchTableFormData)">提交
+                            <el-button type="primary" @click="mastersubmit(SearchTableFormData)">提交
                             </el-button>
                         </div>
                     </el-dialog>
