--- a/src/views/payservice.html
+++ b/src/views/payservice.html
@@ -106,9 +106,13 @@
                                 <el-input v-model="SearchTableFormData.sort"></el-input>
                             </el-form-item>
                             <el-form-item label="报修类型：" prop="repairsTypeIds">
-                                <el-table :data="options" @selection-change="handleSelectionChange" 
+                                <el-table :data="options" @current-change="getTemplateRow"
                                 tooltip-effect="dark" ref="multipleTable" height="300px">
-                                    <el-table-column type="selection" width="55"></el-table-column>
+                                    <el-table-column label="选择" width="55">
+                                        <template slot-scope="scope">  
+                                            <el-radio  v-model="tableRadio" :label="scope.row"><i></i></el-radio>
+                                        </template>
+                                    </el-table-column>
                                     <el-table-column prop="machineName" label="设备类型">
                                         <template slot-scope="scope">
                                             {{ scope.row.machineName == -1 ? '无' : scope.row.machineName }}
