--- a/src/views/reference.html
+++ b/src/views/reference.html
@@ -46,11 +46,11 @@
                                     {{ scope.row.offerContent == -1 ? '无' : scope.row.offerContent }}
                                 </template>
                             </el-table-column>
-                            <el-table-column prop="offerExplain" label="报价项格式">
+                            <!-- <el-table-column prop="offerExplain" label="报价项格式">
                                 <template slot-scope="scope">
                                     {{ scope.row.offerExplain == -1 ? '无' : scope.row.offerExplain }}
                                 </template>
-                            </el-table-column>
+                            </el-table-column> -->
                             <el-table-column prop="createTime" label="创建时间"></el-table-column>
                             <el-table-column fixed="right" label="操作">
                                 <template slot-scope="scope">
@@ -75,16 +75,27 @@
                             <el-form-item label="报修类型名" prop="repairsTypeName">
                                 <el-input v-model="SearchTableFormData.repairsTypeName"></el-input>
                             </el-form-item>
-                            <el-form-item label="报价项格式" prop="offerExplain">
-                                <el-input v-model="SearchTableFormData.offerExplain"></el-input>
-                            </el-form-item>
                             <el-form-item label="说明文本" prop="offerContent">
-                                <el-input v-model="SearchTableFormData.offerContent"></el-input>
+                                <template>
+                                    <el-button type="primary" plain @click="inputArrayChange">添加</el-button>
+                                </template>
+                                <template>
+                                    <el-button type="primary" plain @click="inputArrayChanges">添加</el-button>
+                                </template>
+                                <div v-for="(item, index) in inputArray" style="margin: 10px 0;">
+                                    <el-input v-for="(items, indexs) in item" v-model="items.name" :value="items.value"  @change="changeInputValue($event, indexs)"></el-input>
+                                    <el-button type="danger" @click="inputArrayChangeDelete(index)">删除</el-button>
+                                </div>
+                                <!-- <el-input v-model="SearchTableFormData.offerContent"></el-input> -->
                             </el-form-item>
                             <el-form-item label="报修类型：" prop="repairsTypeIds">
-                                <el-table :data="options" @selection-change="handleSelectionChange" 
+                                <el-table :data="options" @current-change="getTemplateRow"
                                 tooltip-effect="dark" ref="multipleTable" height="300px">
-                                    <el-table-column type="selection" width="55"></el-table-column>
+                                    <el-table-column label="选择" width="55">
+                                        <template slot-scope="scope">  
+                                            <el-radio  v-model="tableRadio" :label="scope.row"><i></i></el-radio>
+                                        </template>
+                                    </el-table-column>
                                     <el-table-column prop="machineName" label="设备类型">
                                         <template slot-scope="scope">
                                             {{ scope.row.machineName == -1 ? '无' : scope.row.machineName }}
