--- a/src/views/payservice.html
+++ b/src/views/payservice.html
@@ -56,9 +56,15 @@
                     <template>
                         <el-table :data="tableData" stripe style="width: 100%" border>
                             <el-table-column prop="demandName" label="需求名"></el-table-column>
-                            <el-table-column prop="offerContent" label="说明文本">
+                            <el-table-column prop="offerContent" label="需求类型">
                                 <template slot-scope="scope">
                                     {{ scope.row.demandType == 1 ? '远程指导' : "上门" }}
+                                </template>
+                            </el-table-column>
+                            <el-table-column prop="content" label="参考价">
+                                <template slot-scope="scope">
+                                    <div>{{ scope.row.content.split('|')[0] }}</div>
+                                    <div>{{ scope.row.content.split('|')[1] }}</div>
                                 </template>
                             </el-table-column>
                             <el-table-column prop="price" label="单价">
@@ -66,9 +72,17 @@
                                     {{ parseFloat(scope.row.price / 100).toFixed(2) }} RMB
                                 </template>
                             </el-table-column>
-                            <el-table-column prop="repairsName" label="报修分类名"></el-table-column>
-                            <el-table-column prop="repairsTypeName" label="报修类型名"></el-table-column>
-                            <!-- <el-table-column prop="sort" label="排序号"></el-table-column> -->
+                            <el-table-column prop="repairsName" label="报修分类名">
+                                <template slot-scope="scope">
+                                    {{ scope.row.repairsName == -1 ? '无' : scope.row.repairsName }}
+                                </template>
+                            </el-table-column>
+                            <el-table-column prop="repairsTypeName" label="报修类型名">
+                                <template slot-scope="scope">
+                                    {{ scope.row.repairsTypeName == -1 ? '无' : scope.row.repairsTypeName }}
+                                </template>
+                            </el-table-column>
+                            <el-table-column prop="sort" label="排序"></el-table-column>
                             <el-table-column fixed="right" label="操作">
                                 <template slot-scope="scope">
                                     <el-button type="text" size="small"
@@ -100,7 +114,9 @@
                                 <el-input v-model="SearchTableFormData.prices"></el-input>
                             </el-form-item>
                             <el-form-item label="参考价" prop="content">
-                                <el-input v-model="SearchTableFormData.content "></el-input>
+                                <el-input v-model="SearchTableFormData.contenta" style="width: 50%;margin-bottom: 10px;"></el-input>
+                                示例
+                                <el-input v-model="SearchTableFormData.contents" style="width: 50%"></el-input>
                             </el-form-item>
                             <el-form-item label="排序号" prop="sort">
                                 <el-input v-model="SearchTableFormData.sort"></el-input>
