--- a/src/views/reference.html
+++ b/src/views/reference.html
@@ -41,16 +41,16 @@
                         <el-table :data="tableData" stripe style="width: 100%" border>
                             <el-table-column prop="repairsName" label="报修分类名"></el-table-column>
                             <el-table-column prop="repairsTypeName" label="报修类型名"></el-table-column>
-                            <el-table-column prop="offerContent" label="说明文本">
+                            <el-table-column prop="offerContent" label="底部说明文本" :show-overflow-tooltip="true">
                                 <template slot-scope="scope">
                                     {{ scope.row.offerContent == -1 ? '无' : scope.row.offerContent }}
                                 </template>
                             </el-table-column>
-                            <!-- <el-table-column prop="offerExplain" label="报价项格式">
+                            <el-table-column prop="offerExplain" label="报价项信息" :show-overflow-tooltip="true">
                                 <template slot-scope="scope">
-                                    {{ scope.row.offerExplain == -1 ? '无' : scope.row.offerExplain }}
+                                    {{ scope.row.offerExplain == -1 ? '无' : JSON.parse(scope.row.offerExplain) }}
                                 </template>
-                            </el-table-column> -->
+                            </el-table-column>
                             <el-table-column prop="createTime" label="创建时间"></el-table-column>
                             <el-table-column fixed="right" label="操作">
                                 <template slot-scope="scope">
@@ -69,22 +69,30 @@
 
                     <el-dialog title="费用参考" :visible.sync="SearchTableAndVisible" width="50%">
                         <el-form :data="SearchTableFormData" label-width="160px">
-                            <el-form-item label="报修分类名" prop="repairsName">
-                                <el-input v-model="SearchTableFormData.repairsName"></el-input>
+                            <el-form-item label="底部说明文字" prop="offerContent">
+                                <el-input v-model="SearchTableFormData.offerContent" type="textarea"></el-input>
                             </el-form-item>
-                            <el-form-item label="报修类型名" prop="repairsTypeName">
-                                <el-input v-model="SearchTableFormData.repairsTypeName"></el-input>
-                            </el-form-item>
-                            <el-form-item label="说明文本" prop="offerContent">
-                                <template>
-                                    <el-button type="primary" plain @click="inputArrayChange">添加</el-button>
-                                </template>
-                                <template>
-                                    <el-button type="primary" plain @click="inputArrayChanges">添加</el-button>
-                                </template>
-                                <div v-for="(item, index) in inputArray" style="margin: 10px 0;">
-                                    <el-input v-for="(items, indexs) in item" v-model="items.name" :value="items.value"  @change="changeInputValue($event, indexs)"></el-input>
-                                    <el-button type="danger" @click="inputArrayChangeDelete(index)">删除</el-button>
+                            <el-form-item label="说明文本信息" prop="offerExplain">
+                                <div>
+                                    <template>
+                                        <el-button type="primary" plain @click="inputArrayChanges">添加行数</el-button> 示例
+                                    </template>
+                                </div>
+
+                                <div v-for="(item, index) in inputArrays" style="width:100%; margin: 10px 0;">
+                                    <div>
+                                        行数{{ index + 1}}： <el-button type="primary" plain @click="inputArrayChange(index)">添加列数</el-button> 
+                                        <div v-for="(items, indexs) in item.inputArray" style="width:100%;margin: 10px 0;height: auto;overflow: hidden;">
+                                            <div>
+                                                <span style="float: left;">
+                                                    行{{ index + 1}}列{{ indexs + 1 }}：
+                                                </span>
+                                                <el-input style="width: 20%;float: left;" v-model="items.value" :value="items.value"  @change="changeInputValues($event, indexs, index)"></el-input>
+                                            </div>
+                                            <el-button type="danger" @click="inputArrayChangeDelete(index, indexs)">删除第{{ indexs + 1}}行列</el-button>
+                                        </div>
+                                    </div>
+                                    <el-button type="danger" @click="inputArrayChangeDeletes(index)">删除第{{ index + 1}}行</el-button>
                                 </div>
                                 <!-- <el-input v-model="SearchTableFormData.offerContent"></el-input> -->
                             </el-form-item>
@@ -92,7 +100,7 @@
                                 <el-table :data="options" @current-change="getTemplateRow"
                                 tooltip-effect="dark" ref="multipleTable" height="300px">
                                     <el-table-column label="选择" width="55">
-                                        <template slot-scope="scope">  
+                                        <template slot-scope="scope">
                                             <el-radio  v-model="tableRadio" :label="scope.row"><i></i></el-radio>
                                         </template>
                                     </el-table-column>
