--- a/src/views/underwayorder.html
+++ b/src/views/underwayorder.html
@@ -72,89 +72,118 @@
                     <el-dialog title="工单详情" :visible.sync="UpdateTableAndVisible">
                         <el-form :model="formData" label-width="180px">
 
-                            <el-form-item label="需求名" prop="demandName">
-                                <el-input v-model="formData.demandName"></el-input>
+                            <el-form-item label="需求名：" prop="demandName">
+                                <!-- <el-input v-model="formData.demandName"></el-input> -->
+                                {{formData.demandName}}
                             </el-form-item>
 
-                            <el-form-item label="需求类型" prop="demandType">
-                                <el-radio-group v-model="formData.demandType">
+                            <el-form-item label="需求类型：" prop="demandType">
+                                <!-- <el-radio-group v-model="formData.demandType">
                                     <el-radio :label="1">远程指导</el-radio>
                                     <el-radio :label="2">上门</el-radio>
-                                </el-radio-group>
+                                </el-radio-group> -->
+                                {{formData.demandType == 1 ? '远程指导' : '上门'}}
                             </el-form-item>
                             
-                            <el-form-item label="故障描述" prop="faultContent">
-                                <el-input v-model="formData.faultContent"></el-input>
+                            <el-form-item label="故障描述：" prop="faultContent">
+                                <!-- <el-input v-model="formData.faultContent"></el-input> -->
+                                {{formData.faultContent}}
                             </el-form-item>
 
-                            <el-form-item label="保修类型名" prop="repairsTypeName">
-                                <el-input v-model="formData.repairsTypeName"></el-input>
+                            <el-form-item label="保修类型名：" prop="repairsTypeName">
+                                <!-- <el-input v-model="formData.repairsTypeName"></el-input> -->
+                                {{formData.repairsTypeName}}
                             </el-form-item>
                             
-                            <el-form-item label="门店名称" prop="shopName">
-                                <el-input v-model="formData.shopName"></el-input>
+                            <el-form-item label="门店名称：" prop="shopName">
+                                <!-- <el-input v-model="formData.shopName"></el-input> -->
+                                {{formData.shopName}}
                             </el-form-item>
 
-                            <el-form-item label="故障部分图" prop="faultPartPic">
-                                <el-input v-model="formData.faultPartPic"></el-input>
+                            <el-form-item label="故障部分图：" prop="faultPartPic">
+                                <!-- <el-input v-model="formData.faultPartPic"></el-input> -->
+                                <!-- <img :src="{{ formData.faultPartPic }}"> -->
                             </el-form-item>
 
-                            <el-form-item label="机器品牌图" prop="machineBrandPic">
-                                <el-input v-model="formData.machineBrandPic"></el-input>
+                            <el-form-item label="机器品牌图：" prop="machineBrandPic">
+                                <!-- <el-input v-model="formData.machineBrandPic"></el-input> -->
+                                {{formData.shopName}}
                             </el-form-item>
 
-                            <el-form-item label="机器整体图" prop="machineOverallPic">
-                                <el-input v-model="formData.machineOverallPic"></el-input>
+                            <el-form-item label="机器整体图：" prop="machineOverallPic">
+                                <!-- <el-input v-model="formData.machineOverallPic"></el-input> -->
                             </el-form-item>
 
-                            <el-form-item label="故障部分图">
+                            <el-form-item label="联系地址：">
                                 {{ formData.province + formData.city + formData.district + formData.address }}
                             </el-form-item>
 
-                            <el-form-item label="联系人名称" prop="contactName">
-                                <el-input v-model="formData.contactName"></el-input>
+                            <el-form-item label="联系人名称：" prop="contactName">
+                                <!-- <el-input v-model="formData.contactName"></el-input> -->
+                                {{formData.contactName}}
                             </el-form-item>
 
-                            <el-form-item label="联系人电话" prop="contactPhone">
-                                <el-input v-model="formData.contactPhone"></el-input>
+                            <el-form-item label="联系人电话：" prop="contactPhone">
+                                <!-- <el-input v-model="formData.contactPhone"></el-input> -->
+                                {{formData.contactPhone}}
                             </el-form-item>
 
-                            <el-form-item label="维修师傅名称" prop="maintainerName">
-                                <el-input v-model="formData.maintainerName"></el-input>
+                            <el-form-item label="维修师傅名称：" prop="maintainerName">
+                                <!-- <el-input v-model="formData.maintainerName"></el-input> -->
+                                {{formData.maintainerName == -1 ? '无' : formData.maintainerName}}
                             </el-form-item>
 
-                            <el-form-item label="维修师傅电话" prop="maintainerPhone">
-                                <el-input v-model="formData.maintainerPhone"></el-input>
+                            <el-form-item label="维修师傅电话：" prop="maintainerPhone">
+                                <!-- <el-input v-model="formData.maintainerPhone"></el-input> -->
+                                {{formData.maintainerPhone == -1 ? '无' : formData.maintainerPhone}}
                             </el-form-item>
 
-                            <el-form-item label="联系人电话" prop="contactPhone">
-                                <el-input v-model="formData.contactPhone"></el-input>
+                            <el-form-item label="联系人电话：" prop="contactPhone">
+                                <!-- <el-input v-model="formData.contactPhone"></el-input> -->
+                                {{formData.contactPhone}}
                             </el-form-item>
 
-                            <el-form-item label="用户端用户微信昵称" prop="nickName">
-                                <el-input v-model="formData.nickName"></el-input>
+                            <el-form-item label="用户端用户微信昵称：" prop="nickName">
+                                <!-- <el-input v-model="formData.nickName"></el-input> -->
+                                {{formData.nickName}}
                             </el-form-item>
 
-                            <el-form-item label="支付总金额展示" prop="paymentStr">
-                                <el-input v-model="formData.paymentStr"></el-input>
+                            <el-form-item label="支付总金额展示：" prop="paymentStr">
+                                <!-- <el-input v-model="formData.paymentStr"></el-input> -->
+                                {{formData.paymentStr}}
                             </el-form-item>
 
-                            <el-form-item label="工单耗时" prop="timeConsumingStr">
-                                <el-input v-model="formData.timeConsumingStr"></el-input>
+                            <el-form-item label="工单耗时：" prop="timeConsumingStr">
+                                <!-- <el-input v-model="formData.timeConsumingStr"></el-input> -->
+                                {{formData.timeConsumingStr == -1 ? '无' : formData.timeConsumingStr}}
                             </el-form-item>
-                            <el-form-item label="上门费用" prop="visitCostStr">
-                                <el-input v-model="formData.visitCostStr"></el-input>
+                            <el-form-item label="上门费用：" prop="visitCostStr">
+                                <!-- <el-input v-model="formData.visitCostStr"></el-input> -->
+                                {{formData.visitCostStr}}
                             </el-form-item>
 
                             <el-form-item label="状态：" prop="status">
-                                <el-radio-group v-model="formData.status">
+                                <!-- <el-radio-group v-model="formData.status">
                                     <el-radio :label="1">已确认/已支付定金/待沟通</el-radio>
                                     <el-radio :label="2">已联络/待派单</el-radio>
                                     <el-radio :label="3">已派单/维修中</el-radio>
                                     <el-radio :label="5">已完成/已回访</el-radio>
                                     <el-radio :label="18">已提交/未确认</el-radio>
                                     <el-radio :label="19">已取消</el-radio>
-                                </el-radio-group>
+                                </el-radio-group> -->
+                                {{
+                                    formData.status == 1 ?
+                                    '已确认/已支付定金/待沟通'
+                                    : formData.status == 2 ?
+                                    '已联络/待派单' 
+                                    : formData.status == 3 ? 
+                                    '已派单/维修中' 
+                                    : formData.status == 5 ? 
+                                    '已完成/已回访' 
+                                    : formData.status == 18 ? 
+                                    '已提交/未确认' 
+                                    : '已取消'
+                                }}
                             </el-form-item>
 
                             <div class="btn-center" style="text-align: center; margin: 20px;">
@@ -194,8 +223,8 @@
                             <el-form-item label="工单号" prop="workId">
                                 <el-input v-model="SearchTableFormDatas.workId"></el-input>
                             </el-form-item>
-                            <el-form-item label="工单金额" prop="payment">
-                                <el-input v-model="SearchTableFormDatas.payment"></el-input>
+                            <el-form-item label="工单金额" prop="payments">
+                                <el-input v-model="SearchTableFormDatas.payments"></el-input>
                             </el-form-item>
                             <div class="btn-center" style="text-align: center; margin: 20px;">
                                 <el-button type="primary" @click="denorder(SearchTableFormDatas)">确认完成
