--- a/src/views/advertisement.html
+++ b/src/views/advertisement.html
@@ -84,13 +84,9 @@
                                 <template v-model="SearchTableFormData.advertisingUrl">
                                     <el-upload :action="fileUpdata" list-type="picture-card"
                                         :file-list="imageList.machinePic" :limit="num" :data="fileData" :headers="fileUpdataExcData"
-                                        :on-change="fileChange" :on-success="machineSceneSuccess" :on-exceed="fileExceed"
-                                        :on-preview="handlePictureCardPreview" :on-remove="handleRemove">
+                                        :on-change="fileChange" :on-success="machineSceneSuccess" :on-exceed="fileExceed" :on-remove="handleRemove">
                                         <i class="el-icon-plus"></i>
                                     </el-upload>
-                                    <el-dialog :visible.sync="dialogVisible">
-                                        <img width="100%" :src="dialogImageUrl" alt="">
-                                    </el-dialog>
                                 </template>
                             </el-form-item>
                             <el-form-item label="排序号" prop="sort">
